apps/akk-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akk-frontend
  namespace: akk-frontend
spec:
  selector:
    app: akk-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
